--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^12.6.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.5",
     "tailwindcss": "^4.1.16"
